# setup.cfg file at the root directory[metadata]

[metadata]
name = customtkwidgets
author = Christophe Moustier
url = https://github.com/Moustov/mTk_widgets
version = 0.0.1
description = Series of OO tkinter widgets
long_description = Overriden tkinter widgets
keywords = UI, tkinter, OO
license = BSD 3-Clause License
python_requires = >=3.9, <4
# https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3.9
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Natural Language :: English
    Topic :: Utilities
[bdist_wheel]
python-tag=py39

[options]
packages = find_namespace:
package_dir=
zip_safe = False
include_package_data = True
install_requires =

[options.package_data]
* = *.txt, *.rst


[options.packages.find]
where=.
exclude =
    venv*
    build*
    *.py
    *.txt
    *.log
